--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "@babel/register": "^7.21.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@testing-library/react": "^14.0.0",
-    "@types/body-scroll-lock": "^3.1.0",
     "@types/dialog-polyfill": "^0.5.2",
     "@types/dom-chromium-installation-events": "^101.0.0",
     "@types/dom-screen-wake-lock": "^1.0.1",
@@ -201,7 +200,6 @@
     "@sentry/tracing": "^7.0.0",
     "@textcomplete/core": "^0.1.9",
     "@textcomplete/textarea": "^0.1.9",
-    "body-scroll-lock": "^3.1.5",
     "bungie-api-ts": "^4.12.0",
     "caniuse-lite": ">=1.0.30000843",
     "clsx": "^1.0.4",
@@ -236,6 +234,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "safari-14-idb-fix": "^3.0.0",
+    "tua-body-scroll-lock": "^1.2.1",
     "typesafe-actions": "^5.1.0",
     "ua-parser-js": "^1.0.33",
     "use-subscription": "^1.5.1",
