--- a/package.json
+++ b/package.json
@@ -135,10 +135,10 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-jsx-expressions": "^1.3.1",
     "eslint-plugin-lodash": "^7.1.0",
-    "eslint-plugin-radar": "^0.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-react-redux": "^4.0.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
     "fontawesome-subset": "^4.1.0",
     "fork-ts-checker-notifier-webpack-plugin": "^5.0.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
