--- a/package.json
+++ b/package.json
@@ -185,7 +185,7 @@
     "webpack-dev-server": "^4.0.0",
     "webpack-notifier": "^1.6.0",
     "webpack-stats-plugin": "^1.0.3",
-    "workbox-webpack-plugin": "^6.1.0"
+    "workbox-webpack-plugin": "7.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.1.2",
@@ -240,11 +240,11 @@
     "ua-parser-js": "^1.0.33",
     "use-subscription": "^1.5.1",
     "uuid": "^9.0.0",
-    "workbox-cacheable-response": "^6.1.0",
-    "workbox-core": "^6.1.0",
-    "workbox-expiration": "^6.1.0",
-    "workbox-precaching": "^6.1.0",
-    "workbox-routing": "^6.1.0",
-    "workbox-strategies": "^6.1.0"
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0"
   }
 }
