Switch react-virtualized to @tanstack/react-virtual

--- a/package.json
+++ b/package.json
@@ -103,7 +103,6 @@
     "@types/react-dom": "^18.0.3",
     "@types/react-test-renderer": "^18.0.0",
     "@types/react-transition-group": "^4.2.0",
-    "@types/react-virtualized": "^9.21.1",
     "@types/ua-parser-js": "^0.7.36",
     "@types/use-subscription": "^1.0.0",
     "@types/uuid": "^9.0.0",
@@ -199,6 +198,7 @@
     "@sentry/browser": "^7.0.0",
     "@sentry/react": "^7.0.0",
     "@sentry/tracing": "^7.0.0",
+    "@tanstack/react-virtual": "^3.0.0-beta.54",
     "@textcomplete/core": "^0.1.9",
     "@textcomplete/textarea": "^0.1.9",
     "body-scroll-lock": "^3.1.5",
@@ -231,7 +231,6 @@
     "react-textarea-autosize": "^8.4.0",
     "react-transition-group": "^4.0.0",
     "react-twitter-widgets": "^1.7.1",
-    "react-virtualized": "^9.21.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
