Enable cycle lint

--- a/.eslintrc
+++ b/.eslintrc
@@ -314,7 +314,7 @@
     "github/no-innerText": "error",
     "import/no-named-as-default": "error",
     "import/no-named-as-default-member": "error",
-    "import/no-cycle": "off",
+    "import/no-cycle": "error",
     "import/dynamic-import-chunkname": "error",
     "import/no-duplicates": "error",
     "import/no-named-default": "error"
