--- a/package.json
+++ b/package.json
@@ -226,8 +226,8 @@
     "react-dom": "^18.1.0",
     "react-dropzone": "^14.2.0",
     "react-redux": "^8.0.1",
-    "react-router": "=6.11.2",
-    "react-router-dom": "=6.11.2",
+    "react-router": "^6.14.1",
+    "react-router-dom": "^6.14.1",
     "react-textarea-autosize": "^8.4.0",
     "react-transition-group": "^4.0.0",
     "react-twitter-widgets": "^1.7.1",
