Use importHelpers / tslib

--- a/src/app/loadout-builder/process-worker/tsconfig.json
+++ b/src/app/loadout-builder/process-worker/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
-    "strictNullChecks": true,
-    "strictBindCallApply": true,
-    "noUnusedParameters": true,
+    "strict": true,
+    "useUnknownInCatchVariables": false,
+    "esModuleInterop": true,
     "target": "esnext",
     "module": "esnext",
     "lib": ["webworker", "esnext"],
     "moduleResolution": "node",
     "noUnusedLocals": true,
-    "sourceMap": true,
-    "esModuleInterop": true,
+    "noUnusedParameters": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "importHelpers": true,
+    "sourceMap": true,
     "allowJs": false,
     "baseUrl": ".",
     "paths": {
