--- a/package.json
+++ b/package.json
@@ -235,6 +235,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "safari-14-idb-fix": "^3.0.0",
+    "tslib": "^2.6.1",
     "typesafe-actions": "^5.1.0",
     "ua-parser-js": "^1.0.33",
     "use-subscription": "^1.5.1",
