--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "importHelpers": true,
     "baseUrl": ".",
     "allowJs": true,
     "paths": {
