Upgrade prettier, switch to lint-staged

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "printWidth": 100,
   "singleQuote": true,
-  "arrowParens": "always",
+  "trailingComma": "es5",
   "overrides": [
     {
       "files": "*.html"
