--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@babel/preset-typescript": "^7.21.0",
     "@babel/register": "^7.21.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
+    "@sigmacomputing/babel-plugin-lodash": "^3.3.5",
     "@testing-library/react": "^14.0.0",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/dom-chromium-installation-events": "^101.0.0",
@@ -114,7 +115,6 @@
     "autoprefixer": "^10.0.0",
     "babel-jest": "^29.0.1",
     "babel-loader": "^9.0.1",
-    "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-object-to-json-parse": "^0.2.3",
     "babel-plugin-optimize-clsx": "^2.5.0",
     "babel-plugin-transform-imports": "^2.0.0",
