--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "cross-env": "^7.0.0",
     "css-loader": "^6.2.0",
     "css-modules-typescript-loader": "^4.0.0",
+    "cssnano": "^6.0.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-array-func": "^3.1.7",
@@ -162,6 +163,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.0.9",
     "postcss-loader": "^7.0.0",
+    "postcss-sort-media-queries": "^5.2.0",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.0.0",
     "react-refresh": "^0.14.0",
@@ -218,6 +220,7 @@
     "lodash": "^4.17.8",
     "memoize-one": "^6.0.0",
     "papaparse": "^5.0.0",
+    "postcss-assets-webpack-plugin": "^4.1.2",
     "react": "^18.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
