Enable no-unsafe-call
This one isn't a slam dunk :-(

--- a/.eslintrc
+++ b/.eslintrc
@@ -327,7 +327,7 @@
     ],
     "@typescript-eslint/no-unsafe-argument": "error",
     "@typescript-eslint/no-unsafe-assignment": "off",
-    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-unsafe-call": "error",
     "@typescript-eslint/no-unsafe-member-access": "off",
     "@typescript-eslint/no-unsafe-return": "off",
     "@typescript-eslint/no-redundant-type-constituents": "off",
