--- a/.eslintrc
+++ b/.eslintrc
@@ -329,7 +329,7 @@
     "@typescript-eslint/no-unsafe-assignment": "off",
     "@typescript-eslint/no-unsafe-call": "error",
     "@typescript-eslint/no-unsafe-member-access": "off",
-    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/no-unsafe-return": "error",
     "@typescript-eslint/no-redundant-type-constituents": "off",
     "no-implied-eval": "off",
     "@typescript-eslint/no-implied-eval": "error",
