--- a/.eslintrc
+++ b/.eslintrc
@@ -152,6 +152,13 @@
         ]
       }
     ],
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "TSEnumDeclaration:not([const=true])",
+        "message": "Please only use `const enum`s."
+      }
+    ],
     "spaced-comment": [
       "error",
       "always",
