--- a/.eslintrc
+++ b/.eslintrc
@@ -152,6 +152,13 @@
         ]
       }
     ],
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "CallExpression[callee.property.name='compact'][callee.object.name='_'][arguments.0.callee.property.name='map']",
+        "message": "Please use `filterMap` instead"
+      }
+    ],
     "spaced-comment": [
       "error",
       "always",
