--- a/package.json
+++ b/package.json
@@ -201,7 +201,7 @@
     "@tanstack/react-virtual": "^3.0.0-beta.54",
     "@textcomplete/core": "^0.1.9",
     "@textcomplete/textarea": "^0.1.9",
-    "body-scroll-lock-upgrade": "^1.0.4",
+    "body-scroll-lock": "^3.1.5",
     "bungie-api-ts": "^5.0.0",
     "caniuse-lite": ">=1.0.30000843",
     "clsx": "^2.0.0",
