--- a/.eslintrc
+++ b/.eslintrc
@@ -149,6 +149,12 @@
             "group": ["testing/*"],
             "message": "You cannot use test helpers in regular code."
           }
+        ],
+        "paths": [
+          {
+            "name": "app/storage/idb-keyval",
+            "message": "Please use app/storage/object-store instead."
+          }
         ]
       }
     ],
@@ -157,7 +163,8 @@
       {
         "selector": "CallExpression[callee.property.name='compact'][callee.object.name='_'][arguments.0.callee.property.name='map']",
         "message": "Please use `filterMap` instead"
-      }, {
+      },
+      {
         "selector": "TSEnumDeclaration:not([const=true])",
         "message": "Please only use `const enum`s."
       }
