--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -53,6 +53,7 @@ jobs:
               - package.json
               - yarn.lock
               - config/webpack.ts
+              - babel.config.js
 
       - name: Send webpack stats to RelativeCI
         if: ${{ steps.filter.outputs.build-pipeline == 'true' }}
