--- a/.eslintrc
+++ b/.eslintrc
@@ -264,6 +264,7 @@
         "checksVoidReturn": false
       }
     ],
+    "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
