Swap out _.groupBy for standard Object.groupBy or Map.groupBy
This still relies on some awkward copies until
https://github.com/tc39/proposal-iterator-helpers lands.

--- a/.eslintrc
+++ b/.eslintrc
@@ -137,6 +137,11 @@
         "object": "_",
         "property": "noop",
         "message": "Import noop directly instead of using it through _.noop, to satisfy the unbound-method lint"
+      },
+      {
+        "object": "_",
+        "property": "groupBy",
+        "message": "Use Object.groupBy or Map.groupBy instead."
       }
     ],
     "no-restricted-imports": [
