--- a/package.json
+++ b/package.json
@@ -222,7 +222,7 @@
     "react": "^18.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dnd-multi-backend": "^8.0.0",
+    "react-dnd-multi-backend": "8.0.1",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.1.0",
     "react-dropzone": "^14.2.0",
