--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -21,10 +21,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: yarn
+          cache: npm
 
       - name: Install
-        run: yarn install --frozen-lockfile --prefer-offline
+        run: npm ci
 
       - name: get-npm-version
         id: package-version
@@ -39,7 +39,7 @@ jobs:
           echo "VERSION=${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}" >> $GITHUB_ENV
 
       - name: Build beta
-        run: yarn build:beta
+        run: npm run build:beta
         env:
           NODE_OPTIONS: "--max_old_space_size=8192"
           PR_BUILD: true
@@ -51,7 +51,7 @@ jobs:
           filters: |
             build-pipeline:
               - package.json
-              - yarn.lock
+              - package-lock.json
               - config/webpack.ts
               - babel.config.js
 
