--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "lint:prettier": "prettier \"src/**/*.{js,ts,tsx,scss}\" --check",
     "lint:stylelint": "stylelint \"src/**/*.scss\"",
     "lintcached": "run-p lintcached:*",
-    "lintcached:eslint": "yarn lint:eslint --cache --cache-location .eslintcache --cache-strategy content",
-    "lint-report": "yarn lint:eslint --output-file eslint_report.json --format json",
-    "lint-report:cached": "yarn lintcached:eslint --output-file eslint.results.json --format json",
+    "lintcached:eslint": "npm run lint:eslint --cache --cache-location .eslintcache --cache-strategy content",
+    "lint-report": "npm run lint:eslint --output-file eslint_report.json --format json",
+    "lint-report:cached": "npm run lintcached:eslint --output-file eslint.results.json --format json",
     "fix": "run-s fix:*",
-    "fix:eslint": "yarn lint:eslint --fix",
+    "fix:eslint": "npm run lint:eslint -- --fix",
     "fix:json": "jsonsort src/locale",
-    "fix:stylelint": "yarn lint:stylelint --fix",
-    "fix:prettier": "yarn lint:prettier --write",
+    "fix:stylelint": "npm run lint:stylelint -- --fix",
+    "fix:prettier": "npm run lint:prettier -- --write",
     "bundle": "webpack --config ./config/webpack.ts",
-    "build:release": "yarn -s bundle --env=release --node-env=production",
-    "build:beta": "yarn -s bundle --env=beta --node-env=production",
-    "build:dev": "yarn -s bundle --env=dev",
+    "build:release": "npm run -s bundle --env=release --node-env=production",
+    "build:beta": "npm run -s bundle --env=beta --node-env=production",
+    "build:dev": "npm run -s bundle --env=dev",
     "i18n": "i18next-scanner",
     "start": "run-p watch:i18n devserver",
-    "devserver": "nodemon --delay 2 --watch config/webpack.ts --watch config/feature-flags.ts --watch config/content-security-policy.ts --watch yarn.lock -e ts,js,json,lock --exec \"webpack serve --config ./config/webpack.ts --env=dev || yarn touch\"",
+    "devserver": "nodemon --delay 2 --watch config/webpack.ts --watch config/feature-flags.ts --watch config/content-security-policy.ts --watch package-lock.json -e ts,js,json,lock --exec \"webpack serve --config ./config/webpack.ts --env=dev || npm run touch\"",
     "touch": "node -e \"require('fs').utimes('config/webpack.ts', new Date(), new Date(), () => {})\"",
     "watch:i18n": "nodemon --watch config/i18n.json --exec \"i18next-scanner\"",
     "syntax": "find dist -name \"*.js\" | xargs -n 1 node --check",
@@ -70,6 +70,7 @@
     "last 2 Opera versions"
   ],
   "resolutions": {
+    "@types/react": "18.2.22",
     "react-redux": "^8.0.1",
     "react-is": "^18.1.0"
   },
@@ -84,7 +85,6 @@
     "@babel/preset-typescript": "^7.21.0",
     "@babel/register": "^7.21.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
-    "@sentry/types": "^7.73.0",
     "@sigmacomputing/babel-plugin-lodash": "^3.3.5",
     "@testing-library/react": "^14.0.0",
     "@types/dom-chromium-installation-events": "^101.0.0",
@@ -93,6 +93,7 @@
     "@types/jest": "^29.0.0",
     "@types/lodash": "^4.14.0",
     "@types/lodash-webpack-plugin": "^0.11.6",
+    "@types/marked": "^5.0.0",
     "@types/node": "^18.0.0",
     "@types/papaparse": "^5.0.0",
     "@types/prop-types": "^15.5.2",
@@ -199,6 +200,7 @@
     "@react-hook/resize-observer": "^1.2.0",
     "@sentry/browser": "^7.0.0",
     "@sentry/react": "^7.0.0",
+    "@sentry/types": "^7.73.0",
     "@tanstack/react-virtual": "^3.0.0-beta.61",
     "@textcomplete/core": "^0.1.9",
     "@textcomplete/textarea": "^0.1.9",
@@ -250,5 +252,5 @@
     "*.{css,scss}": "stylelint --fix",
     "*.{js,jsx,ts,tsx,css,scss,md,html}": "prettier --write"
   },
-  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
+  "packageManager": "npm@10.2.0+sha256.c362077587b1e782e5aef3dcf85826399ae552ad66b760e2585c4ac11102243f"
 }
