--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: yarn
+          cache: npm
 
       - name: Install SSH key
         uses: benoitchantre/setup-ssh-authentication-action@1.0.0
@@ -67,7 +67,7 @@ jobs:
           version: ${{ env.VERSION }}
 
       - name: Install
-        run: yarn install --frozen-lockfile --prefer-offline
+        run: npm ci
 
       - name: Build and deploy
         run: ./build/deploy-prod.sh
