--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "label": "start",
       "type": "shell",
-      "command": "yarn",
+      "command": "npm",
       "args": ["start"],
       "isBackground": true,
       "problemMatcher": ["$ts-checker-webpack", "$ts-checker-eslint-webpack"]
