--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
-  "jest.jestCommandLine": "yarn test",
+  "jest.jestCommandLine": "pnpm test",
   "[javascript]": {
     "editor.codeActionsOnSave": {
       "source.organizeImports": false
@@ -62,7 +62,7 @@
     "*.tsx": "${capture}.ts, ${capture}.test.ts",
     "*.m.scss": "${capture}.m.scss.d.ts",
     "tsconfig.json": "tsconfig.*.json",
-    "package.json": "package-lock.json, yarn.lock"
+    "package.json": "package-lock.json, pnpm-lock.yaml"
   },
   "eslint.lintTask.options": "src"
 }
