--- a/.github/workflows/i18n-bot-download.yml
+++ b/.github/workflows/i18n-bot-download.yml
@@ -18,10 +18,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: yarn
+          cache: pnpm
 
       - name: Install
-        run: yarn install --frozen-lockfile --prefer-offline
+        run: pnpm install --frozen-lockfile --prefer-offline
 
       - name: Download updated i18n files
         uses: crowdin/github-action@1.4.7
@@ -46,7 +46,7 @@ jobs:
           done
 
       - name: build browsercheck utils
-        run: yarn bcu
+        run: pnpm bcu
 
       - name: porcelain check
         uses: dorny/paths-filter@v2
