--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app/index.html",
   "private": true,
   "engines": {
-    "node": ">=18"
+    "node": ">=18",
+    "pnpm": ">=8"
   },
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --verbose",
@@ -14,21 +15,21 @@
     "lint:prettier": "prettier \"src/**/*.{js,ts,tsx,scss}\" --check",
     "lint:stylelint": "stylelint \"src/**/*.scss\"",
     "lintcached": "run-p lintcached:*",
-    "lintcached:eslint": "yarn lint:eslint --cache --cache-location .eslintcache --cache-strategy content",
-    "lint-report": "yarn lint:eslint --output-file eslint_report.json --format json",
-    "lint-report:cached": "yarn lintcached:eslint --output-file eslint.results.json --format json",
+    "lintcached:eslint": "pnpm lint:eslint --cache --cache-location .eslintcache --cache-strategy content",
+    "lint-report": "pnpm lint:eslint --output-file eslint_report.json --format json",
+    "lint-report:cached": "pnpm lintcached:eslint --output-file eslint.results.json --format json",
     "fix": "run-s fix:*",
-    "fix:eslint": "yarn lint:eslint --fix",
+    "fix:eslint": "pnpm lint:eslint -- --fix",
     "fix:json": "jsonsort src/locale",
-    "fix:stylelint": "yarn lint:stylelint --fix",
-    "fix:prettier": "yarn lint:prettier --write",
+    "fix:stylelint": "pnpm lint:stylelint -- --fix",
+    "fix:prettier": "pnpm lint:prettier -- --write",
     "bundle": "webpack --config ./config/webpack.ts",
-    "build:release": "yarn -s bundle --env=release --node-env=production",
-    "build:beta": "yarn -s bundle --env=beta --node-env=production",
-    "build:dev": "yarn -s bundle --env=dev",
+    "build:release": "pnpm -s bundle --env=release --node-env=production",
+    "build:beta": "pnpm -s bundle --env=beta --node-env=production",
+    "build:dev": "pnpm -s bundle --env=dev",
     "i18n": "i18next-scanner",
     "start": "run-p watch:i18n devserver",
-    "devserver": "nodemon --delay 2 --watch config/webpack.ts --watch config/feature-flags.ts --watch config/content-security-policy.ts --watch yarn.lock -e ts,js,json,lock --exec \"webpack serve --config ./config/webpack.ts --env=dev || yarn touch\"",
+    "devserver": "nodemon --delay 2 --watch config/webpack.ts --watch config/feature-flags.ts --watch config/content-security-policy.ts --watch pnpm-lock.yaml -e ts,js,json,lock --exec \"webpack serve --config ./config/webpack.ts --env=dev || pnpm touch\"",
     "touch": "node -e \"require('fs').utimes('config/webpack.ts', new Date(), new Date(), () => {})\"",
     "watch:i18n": "nodemon --watch config/i18n.json --exec \"i18next-scanner\"",
     "syntax": "find dist -name \"*.js\" | xargs -n 1 node --check",
@@ -200,15 +201,18 @@
     "@react-hook/resize-observer": "^1.2.0",
     "@sentry/browser": "^7.0.0",
     "@sentry/react": "^7.0.0",
+    "@sentry/types": "^7.73.0",
     "@tanstack/react-virtual": "^3.0.0-beta.61",
     "@textcomplete/core": "^0.1.9",
     "@textcomplete/textarea": "^0.1.9",
+    "@textcomplete/utils": "^0.1.12",
     "bungie-api-ts": "^5.0.0",
     "caniuse-lite": ">=1.0.30000843",
     "clsx": "^2.0.0",
     "comlink": "^4.3.0",
     "core-js": "^3.6.0",
     "dialog-polyfill": "^0.5.6",
+    "dnd-core": "^16.0.1",
     "downshift": "^8.0.0",
     "fast-copy": "^3.0.0",
     "fast-equals": "^5.0.0",
@@ -248,5 +252,24 @@
   "lint-staged": {
     "*.{css,scss}": "stylelint --fix",
     "*.{js,jsx,ts,tsx,css,scss,md,html}": "prettier --write"
+  },
+  "packageManager": "pnpm@8.8.0+sha256.d713a5750e41c3660d1e090608c7f607ad00d1dd5ba9b6552b5f390bf37924e9",
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "@typescript-eslint/parser": "^6.2.0"
+      }
+    },
+    "allowedDeprecatedVersions": {
+      "@fortawesome/fontawesome-svg-core": "*"
+    },
+    "updateConfig": {
+      "ignoreDependencies": [
+        "fork-ts-checker-notifier-webpack-plugin",
+        "fork-ts-checker-webpack-plugin",
+        "@fortawesome/fontawesome-free",
+        "@fortawesome/fontawesome-svg-core"
+      ]
+    }
   }
 }
