--- a/.github/workflows/i18n-update.yml
+++ b/.github/workflows/i18n-update.yml
@@ -17,6 +17,8 @@ jobs:
           fetch-depth: 3
           token: ${{ secrets.I18N_PAT }}
 
+      - uses: pnpm/action-setup@v2
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
