--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           fetch-depth: 2 # So sentry can get the previous commit
 
+      - uses: pnpm/action-setup@v2
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
