--- a/.github/workflows/i18n-bot-download.yml
+++ b/.github/workflows/i18n-bot-download.yml
@@ -14,6 +14,8 @@ jobs:
           ref: ${{ github.head_ref }}
           token: ${{ secrets.I18N_PAT }}
 
+      - uses: pnpm/action-setup@v2
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
