--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@babel/preset-typescript": "^7.21.0",
     "@babel/register": "^7.21.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
+    "@sentry/types": "^7.73.0",
     "@sigmacomputing/babel-plugin-lodash": "^3.3.5",
     "@testing-library/react": "^14.0.0",
     "@types/dom-chromium-installation-events": "^101.0.0",
@@ -203,12 +204,14 @@
     "@tanstack/react-virtual": "^3.0.0-beta.61",
     "@textcomplete/core": "^0.1.9",
     "@textcomplete/textarea": "^0.1.9",
+    "@textcomplete/utils": "^0.1.12",
     "bungie-api-ts": "^5.0.0",
     "caniuse-lite": ">=1.0.30000843",
     "clsx": "^2.0.0",
     "comlink": "^4.3.0",
     "core-js": "^3.6.0",
     "dialog-polyfill": "^0.5.6",
+    "dnd-core": "^16.0.1",
     "downshift": "^8.0.0",
     "fast-copy": "^3.0.0",
     "fast-equals": "^5.0.0",
