--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,4 @@
-src/postcss.config.js
+src/postcss.config.cjs
 config/webpack.ts
 src/app/google.js
 src/browsercheck.js
@@ -7,4 +7,5 @@ src/browsercheck.js
 *.test.tsx
 *.config.js
 src/build-browsercheck-utils.js
-src/testing/jest-setup.js
+src/testing/jest-setup.cjs
+src/fa-subset.js
