--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "babel-plugin-optimize-clsx": "^2.5.0",
     "babel-plugin-transform-imports": "^2.0.0",
     "browserslist": "^4.0.0",
+    "chalk": "^5.3.0",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^10.0.0",
     "content-security-policy-builder": "^2.0.0",
