--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "@types/jest": "^29.5.6",
     "@types/lodash": "^4.14.200",
     "@types/lodash-webpack-plugin": "^0.11.8",
-    "@types/node": "^18.18.7",
+    "@types/node": "18.18.3",
     "@types/papaparse": "^5.3.10",
     "@types/prop-types": "^15.7.9",
     "@types/react": "18.2.22",
@@ -265,6 +265,7 @@
     },
     "updateConfig": {
       "ignoreDependencies": [
+        "@types/node",
         "fork-ts-checker-notifier-webpack-plugin",
         "fork-ts-checker-webpack-plugin",
         "@fortawesome/fontawesome-free",
