Prevent Wildly Invalid Mod Selection
- Add a sanity check to see if there is actually space to socket a mod before it is selected
- This does NOT consider the sockets available on selected armor pieces
- It ONLY checks that, with some combination of theoretical armor, this combination of mods is valid

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
     "source.fixAll": "explicit"
   },
   "jest.jestCommandLine": "pnpm test --",
+  "jestrunner.jestCommand": "pnpm test --",
   "[javascript]": {
     "editor.codeActionsOnSave": {
       "source.organizeImports": false
